--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "Javascript based blockchain",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "node_1": "nodemon --watch dev -e js dev/networkNode.js 3001 http://localhost:3001",
+    "node_2": "nodemon --watch dev -e js dev/networkNode.js 3002 http://localhost:3002",
+    "node_3": "nodemon --watch dev -e js dev/networkNode.js 3003 http://localhost:3003",
+    "node_4": "nodemon --watch dev -e js dev/networkNode.js 3004 http://localhost:3004",
+    "node_5": "nodemon --watch dev -e js dev/networkNode.js 3005 http://localhost:3005"
   },
   "repository": {
     "type": "git",
@@ -15,5 +20,14 @@
   "bugs": {
     "url": "https://github.com/rrohitmaheshwari/blockchain/issues"
   },
-  "homepage": "https://github.com/rrohitmaheshwari/blockchain#readme"
+  "homepage": "https://github.com/rrohitmaheshwari/blockchain#readme",
+  "dependencies": {
+    "express": "^4.16.4",
+    "uuid": "^3.3.2",
+    "body-parser": "^1.18.2",
+    "nodemon": "^1.17.3",
+    "request": "^2.87.0",
+    "request-promise": "^4.2.2",
+    "sha256": "^0.2.0"
+  }
 }
